[tool.poetry]
name = "ctui"
version = "0.7.6"
description = "The ctui library is similar to Python's built in cmd library, but with a curses-like user interface"
authors = ["Justin Searle <justin@controlthings.io>"]
license = "LGPL"
readme = "README.md"
homepage = "https://www.controlthings.io"
repository = "https://github.com/ControlThings-io/ctserial"
keywords = ["serial", "fieldbus", "ICS", "control", "ControlThings"]
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'Intended Audience :: Information Technology',
    'Intended Audience :: Manufacturing',
    'Intended Audience :: Other Audience',    
    'Intended Audience :: Science/Research',
    'Operating System :: Unix',
    'Operating System :: POSIX',
    'Operating System :: Microsoft :: Windows',
    'Topic :: Utilities',
]

[tool.poetry.dependencies]
python = "^3.6"
prompt-toolkit = "^3.0.36"
Pygments = "^2.14.0"
tabulate = "^0.8.0"
tinydb = "^4.7.1"
six = "^1.16.0"

[tool.poetry.group.dev.dependencies]
pylint = "^2.16.2"
black = "^23.1.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.pylint.format]
max-line-length = "88"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

